<resources>
    <!-- MohammadAli Fouladi N01547173-->

    <string name="app_name">MohammadAliLab8</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="Fullname">MohammadAli Fouladi </string>
    <string name="HumberMail">n01547173@humber.ca</string>
    <string name="gitLink">https://www.youtube.com/watch?v=K1caxbWpgZA</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="nameid">MohammadAli n01547173</string>
    <string name="logout_fragment">Logout fragment</string>
    <string name="exit">Do you want to exit the app?</string>
    <string name="switch_image">Switch Image</string>
    <string name="number_of_clicks">Number of clicks:</string>
    <string name="access_photos">Access Photos</string>
    <string name="permission_allowed">Permission allowed</string>
    <string name="permission_denied">Permission denied</string>
    <string name="profile">Profile</string>
    <string name="checkbox">CheckBox</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_id">Enter Student ID(Digits Only)</string>
    <string name="id">ID:</string>
    <string name="current_date_and_time">"Current date and time: "</string>
    <string name="ok">OK</string>
    <string name="emailshow">", email: "</string>
    <string name="idshow">", id: "</string>
    <string name="dismiss">Dismiss</string>
    <string name="id_must_be_at_least_6_digits">ID must be at least 6 digits</string>
    <string name="invalid_email">Invalid email</string>
    <string name="name">MohammadAli</string>
    <string name="Lastname">Fouladi</string>
    <string name="no_data">No Data</string>
    <string name="lock_portrait">Lock Portrait</string>
    <string name="unlock">Unlock</string>
    <string name="access_counter">"Access Counter: "</string>
</resources>