<?xml version="1.0" encoding="utf-8"?>
<!-- MohammadAli Fouladi N01547173-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context=".AboutUsFragment">


    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:rotation="45"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:rotation="-45"
        android:text="@string/Lastname"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTV" />

    <TextView
        android:id="@+id/MoesharedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="168dp"
        android:text="@string/no_data"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameTV" />

    <ToggleButton
        android:id="@+id/MoetoggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/MoesharedTV"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="248dp"
        android:textOff="@string/unlock"
        android:textOn="@string/lock_portrait"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>